--- a/README.mdx
+++ b/README.mdx
@@ -76,4 +76,9 @@ Luego usa el programa a traves de la linea de comandos:
 (Ejemplo para el cálculo del area del rectangulo): java ProgramaCalculaAreaLineaComandos 2 3 5
 
 
+# 12.ProgramaEstadisticas
 
+Programa que solicita 7 numeros y luego calcula lo siguiente:
+El promedio de los positivos
+El promedio de los negativos
+El número de ceros que hay
