Otros miniprogramas con arreglos

--- a/README.mdx
+++ b/README.mdx
@@ -82,3 +82,20 @@ Programa que solicita 7 numeros y luego calcula lo siguiente:
 El promedio de los positivos
 El promedio de los negativos
 El número de ceros que hay
+
+# 13.ProgramaHistograma
+
+Presenta un histograma de frecuencias de un conjunto de 6 números ingresados
+
+# 14.ProgramaMasAltoArreglo
+
+Registra números en un arreglo y obtiene de ellos cuál es el más alto
+
+
+# 15.ProgramaMayorOcurrenciaArray
+
+Registra un conjunto de números y presenta cuál es el de mayor ocurrencia y cuántas veces se repite
+
+# 16.ProgramaOrdenArray
+
+En este programa se registran un conjunto de números y se presentan en un orden especifico: el último, el primero, etc
