Programas con matrices

--- a/README.mdx
+++ b/README.mdx
@@ -99,3 +99,11 @@ Registra un conjunto de números y presenta cuál es el de mayor ocurrencia y cu
 # 16.ProgramaOrdenArray
 
 En este programa se registran un conjunto de números y se presentan en un orden especifico: el último, el primero, etc
+
+# 17.ProgramaConMatriz
+
+En este programa se observa una equis "X" proporcional al tamaño de la matriz deseado
+
+# 18.ProgramaMatricesH
+
+En este programa se observa en consola la forma de un asiento (o h) proporcional al tamaño de la matriz deseado
